--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bitcoinjs-lib": "^3.3.2",
         "bitcore-ecies": "^1.0.3",
         "crypto-js": "^3.1.9-1",
-        "elliptic": "^6.4.0"
+        "elliptic": "^6.4.0",
+        "ethers": "^3.0.21"
     }
 }
