--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,26 @@
 version: '2'
 
 services:
-  node1db:
-    image: 'bitnami/mariadb:latest'
+  pma:
+    image: "phpmyadmin/phpmyadmin"
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=my_user
-      - MARIADB_DATABASE=my_database
-      - MARIADB_PASSWORD=my_password
+      - PMA_HOSTS=node1db,node2db
+      - PMA_USER=dev
+      - PMA_PASSWORD=password
+    depends_on:
+      - node1db
+      - node2db
+    ports:
+      - 5000:80
+
+  node1db:
+    image: 'mariadb:latest'
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - MYSQL_USER=dev
+      - MYSQL_DATABASE=database
+      - MYSQL_PASSWORD=password
+
 
   node1:
     tty: true
@@ -16,26 +29,23 @@ services:
       kompose.service.type: nodeport
     environment:
       - DB_HOST=node1db
-      - DB_USERNAME=my_user
-      - DB_DATABASE=my_database
-      - DB_PASSWORD=my_password
-      - PORT=5000
+      - DB_USERNAME=dev
+      - DB_DATABASE=database
+      - DB_PASSWORD=password
     depends_on:
       - node1db
     ports:
-      - 5000:5000
-    expose:
-      - 5000
+      - 5001:5000
     volumes:
       - ./:/app
 
   node2db:
-    image: 'bitnami/mariadb:latest'
+    image: 'mariadb:latest'
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=my_user
-      - MARIADB_DATABASE=my_database
-      - MARIADB_PASSWORD=my_password
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - MYSQL_USER=dev
+      - MYSQL_DATABASE=database
+      - MYSQL_PASSWORD=password
 
   node2:
     tty: true
@@ -44,15 +54,12 @@ services:
       kompose.service.type: nodeport
     environment:
       - DB_HOST=node2db
-      - DB_USERNAME=my_user
-      - DB_DATABASE=my_database
-      - DB_PASSWORD=my_password
-      - PORT=5001
+      - DB_USERNAME=dev
+      - DB_DATABASE=database
+      - DB_PASSWORD=password
     depends_on:
       - node2db
     ports:
-      - 5001:5001
-    expose:
-      - 5001
+      - 5002:5000
     volumes:
       - ./:/app
