--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
         "react-dom": "^16.2.0"
     },
     "dependencies": {
+        "bip39": "^2.5.0",
         "bitcoinjs-lib": "^3.3.2",
         "bitcore-ecies": "^1.0.3",
         "crypto-js": "^3.1.9-1",
         "elliptic": "^6.4.0",
-        "ethers": "^3.0.21"
+        "ethers": "^3.0.21",
+        "hdkey": "^1.0.0",
+        "ripemd160": "^2.0.2"
     }
 }
