--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,15 +87,28 @@ services:
     build: .
     environment:
       - APPLICATION=explorer
-      - NODE_HOSTS=node1,node2
+      - NODE_HOSTS=node1:5001,node2:5002 #if the browser needs to communicate
+      #- NODE_HOSTS=node1,node2 #if the BE needs to comminicate
     ports:
       - 5004:80
     volumes:
       - ./:/app
 
+  faucet:
+    tty: true
+    build: .
+    environment:
+      - APPLICATION=faucet
+      - NODE_HOSTS=node1,node2
+      - PRIVATE_KEY=0f9d3070204642bc8eb07b00a99ef38eebfec965733a3f70548ce99484fdfd99
+    ports:
+      - 5005:80
+    volumes:
+      - ./:/app
+
 
   miner1.1:
-    #restart: always
+    restart: always
     tty: true
     build: .
     environment:
@@ -107,7 +120,7 @@ services:
       - ./:/app
 
   miner1.2:
-    #restart: always
+    restart: always
     tty: true
     build: .
     environment:
@@ -120,7 +133,7 @@ services:
 
 
   miner2.1:
-    #restart: always
+    restart: always
     tty: true
     build: .
     environment:
@@ -132,7 +145,7 @@ services:
       - ./:/app
 
   miner2.2:
-    #restart: always
+    restart: always
     tty: true
     build: .
     environment:
