explorer and other stuff

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/wallet.js": "/js/wallet.js",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/explorer.js": "/js/explorer.js",
+    "/js/app.js": "/js/app.js"
 }
