--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "elliptic": "^6.4.0",
         "ethers": "^3.0.21",
         "hdkey": "^1.0.0",
+        "react-router-dom": "^4.3.1",
         "ripemd160": "^2.0.2"
     }
 }
