--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,11 +2,11 @@
 nodaemon=true
 loglevel=debug
 
-[program:cron]
-command = cron -f
-autostart=true
-autorestart=true
-priority=3
+#[program:cron]
+#command = cron -f
+#autostart=true
+#autorestart=true
+#priority=3
 
 [program:laravel]
 command = php artisan serve --host=0.0.0.0 --port=80
