--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "ethers": "^3.0.21",
         "hdkey": "^1.0.0",
         "react-bootstrap-table": "^4.3.1",
+        "moment": "^2.22.2",
         "react-router-dom": "^4.3.1",
         "ripemd160": "^2.0.2"
     }
